# Ocote

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.es.md  README.md  package.json  pnpm-lock.yaml  skills-lock.json
.github/workflows/: release.yml
ckb/: commands.json
demo/: index.html  meta.json  package.json
docs/: architecture.md  ckb-guide.md  devlog.md
docs/assets/: README.md
frontend/: aliases.js  autocomplete.js  explorer.js  icons.js  index.html  onboarding.js  preview.js  prompt.js  resizer.js  searcher.js  settings.js  shortcuts.js  stats.js  tab-manager.js  terminal-search.js  terminal.js  theme.css  themes.js  tooltip.js  ui-i18n.js  vt_parser.js  workspaces.js
scripts/: generate-latest-json.mjs  sign-bundled-binaries.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/icons/: icon-dark.icns  icon-light.icns
src-tauri/resources/ocote-prompt/: prompt.bash  prompt.zsh
src-tauri/resources/shell/: .zshenv  .zshrc  bash-hook.bash  prompt.fish  prompt.ps1  prompt.zsh
src-tauri/src/: aliases.rs  ckb.rs  context.rs  fs_explorer.rs  main.rs  pty.rs  stats.rs  vt_parser.rs  workspaces.rs
